# p2obt

./: .gitignore  MANIFEST.in  README.md  api.html  automate.html  credit.html  features.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  p2obp.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build_docs.yml
.workflows/github/: build_docs.yml
_modules/: index.html
_modules/p2obp/: automate.html
_modules/p2obp/backend/: compose.html  parse.html  query.html  upload.html  utils.html
_sources/: credit.rst.txt  features.rst.txt  index.rst.txt  installation.rst.txt
_sources/examples/: ob_creation.rst.txt  query.rst.txt
_sources/modules/: compose.rst.txt  options.rst.txt
data/: templates.toml
doc/: api.rst  conf.py  credit.rst  features.rst  getting_started.rst  index.rst
doc/examples/: ob_creation.rst
doc/modules/: compose.rst  options.rst
docs/: conf.py  getting_started.rst  installation.rst
docs/modules/: upload.rst  utils.rst
docs/source/: api.rst  automate.rst  conf.py  credit.rst  features.rst  getting_started.rst  index.rst  installation.rst
docs/source/examples/: ob_creation.rst  query.rst  query_fields.rst
docs/source/modules/: automate.rst  compose.rst  options.rst  parse.rst  query.rst  upload.rst  utils.rst
examples/: README.rst  create_ob.py  create_obs.py  create_single_ob.py  ob_creation.html  query.html  query_fields.html  query_object.py  use_utils.py  utils.html
lib/: creator.py  parser.py  uploader.py  utils.py
lib/p2api-1.0.5/p2api/: p2api.py
lib/p2api-1.0.5/p2api.egg-info/: PKG-INFO
libs/: MATISSE_create_OB_2.py  creator.py  loadobx.py  p2obp.py  parser.py  query_CDS.py  uploader.py  utils.py
modules/: compose.html  options.html  parse.html  query.html  upload.html  utils.html
p2obp/: __init__.py  automate.py  query_CDS.py
p2obp/backend/: MATISSE_create_OB_2.py  __init__.py  automate.py  compose.py  create.py  create_old.py  create_template.py  creator.py  options.py  p2_backend.py  parse.py  query.py  upload.py  upload_old.py  utils.py
p2obp/data/: Extensive Target Information.xlsx  templates.toml
p2obp/libs/: creator.py  fast_query.py  loadobx.py  parser.py  uploader.py
p2obt/: __init__.py  automate.py
p2obt/backend/: __init__.py  compose.py  options.py  parse.py  query.py  upload.py  utils.py
p2obt/config/: Extensive Target Information.xlsx
tests/: test_compose.py
